# nk

./: .gitignore  CHARACTERS.md  README.md  TLDR.md  install.sh  nk.py  pyproject.toml  query.json  refactor_player.md
example/: README.md  [夏目漱石] 夢十夜.epub  [小栗虫太郎] 黒死館殺人事件.epub  [小栗虫太郎] 黒死館殺人事件.txt
example/[夏目漱石] 夢十夜/: .nk-book.json  001_夢十夜.original.txt  001_夢十夜.txt  001_夢十夜.txt.pitch.json  001_夢十夜.txt.token.json  001_夢十夜.txt.tts.json  002_第一夜.original.txt  002_第一夜.txt  002_第一夜.txt.pitch.json  002_第一夜.txt.token.json  002_第一夜.txt.tts.json  003_第二夜.original.txt  003_第二夜.txt  003_第二夜.txt.pitch.json  003_第二夜.txt.token.json  003_第二夜.txt.tts.json  004_第三夜.original.txt  004_第三夜.txt  004_第三夜.txt.pitch.json  004_第三夜.txt.token.json  004_第三夜.txt.tts.json  005_第四夜.original.txt  005_第四夜.txt  005_第四夜.txt.pitch.json  005_第四夜.txt.token.json  005_第四夜.txt.tts.json  006_第五夜.original.txt  006_第五夜.txt  006_第五夜.txt.pitch.json  006_第五夜.txt.token.json  006_第五夜.txt.tts.json  007_第六夜.original.txt  007_第六夜.txt  007_第六夜.txt.pitch.json  007_第六夜.txt.token.json  007_第六夜.txt.tts.json  008_第七夜.original.txt  008_第七夜.txt  008_第七夜.txt.pitch.json  008_第七夜.txt.token.json  (+25 more)
example/[小栗虫太郎] 黒死館殺人事件/: .nk-book.json  001_黒死館殺人事件.txt  002_序篇_フリャギ一族釈義.txt  003_セントアレキセイ寺院の殺人事件にノリミズが解決を公表しなかったので、そろそろ迷宮入りのウワサが立ちはじめた十日目のこと、その日から捜査関係の主脳部は、ラザレフ殺.txt  003_聖アレキセイ寺院の殺人事件に法水が解決を公表しなかったので、そろそろ迷宮入りの噂が立ちはじめた十日目のこと、その日から捜査関係の主脳部は、ラザレフ殺害者の追求を.txt  004_第一篇_死体と二つの扉を繞って.txt  005_一、栄光の奇蹟.txt  006_グレーテは栄光に輝きて殺さるべし。.txt  007_第二篇_ファウストの呪文.txt  008_一、Undinus_sich_winden(水精よ蜿くれ).txt  008_一、ウンディヌスジッヒヴィンデン(ウンディヌスよウネくれ).txt  009_「ところで、その前にぜひ知っておかねばならないのは、惑星の記号が或る化学記号に相当するという事なんです。Venus_が金星であることは御承知でしょうが、その傍ら.txt  009_「ところで、その前にぜひ知っておかねばならないのは、惑星の記号が或る化学記号に相当するという事なんです。ヴィナス_が金星であることは御承知でしょうが、その傍ら銅.txt  010_ノリミズは、すぐ円廊の扉を開いて光線を入れてから、左側に立ち並んでいるツリグソクの列を見渡しはじめた。が、すぐに「これだ」と云って、中央の一つを指差した。その一.txt  010_法水は、すぐ円廊の扉を開いて光線を入れてから、左側に立ち並んでいる吊具足の列を見渡しはじめた。が、すぐに「これだ」と云って、中央の一つを指差した。その一つは、萌.txt  011_第三篇_黒死館精神病理学.txt  012_一、ジルフス...エーリアスは.txt  012_一、風精…異名は.txt  013_以上述べたところの、総体で五十に近い靴跡には、周囲の細隙から滲み込んだ泥水が、底ひたひたにヨドんでいるだけで、印像の角度は依然鮮明に保たれていた。すなわち、雨に.txt  013_以上述べたところの、総体で五十に近い靴跡には、周囲の細隙から滲み込んだ泥水が、底ひたひたに澱んでいるだけで、印像の角度は依然鮮明に保たれていた。すなわち、雨に叩.txt  (+27 more)
tests/: test_alignment.py  test_book_io.py  test_cast.py  test_chapterized.py  test_deps_cli.py  test_eval.py  test_example_pitch_offsets.py  test_numeric_mapping.py  test_pitch_enrichment.py  test_player_delete.py  test_refine.py  test_ruby.py  test_ruby_evidence.py  test_token_pipeline.py  test_tracker_mapping.py  test_tts_paths.py  test_tts_runtime.py
(+32 files in other folders)
