[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nk"
version = "0.1.0"
description = "Convert Japanese EPUBs to ruby-expanded, TTS-friendly plain text"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "sudachipy>=0.6.8",
    "sudachidict_core>=20230110",
    "pytest>=8.0.0",
]

[project.scripts]
nk = "nk.cli:main"

[project.optional-dependencies]
dev = [
    "twine>=6.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nk"]

[tool.hatch.envs.default]
path = ".venv"
