[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nk"
version = "0.1.0"
description = "Convert Japanese EPUBs into ruby-expanded chapterized text, synthesize VoiceVox MP3s, and stream them via web or WebDAV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "fugashi>=1.2.2",
    "unidic-lite>=1.0.8",
    "requests>=2.32.3",
    "pytest>=8.0.0",
    "pykakasi>=2.2.1",
    "unidic>=1.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "rich>=14.2.0",
    "wsgidav[pam]>=4.3.3",
    "cheroot>=11.1.1",
    "six>=1.17.0",
    "watchdog>=6.0.0",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
nk = "nk.cli:main"

[project.optional-dependencies]
dev = [
    "twine>=6.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nk"]
include = [
    "install.sh",
    "src/nk/data/*.json",
]

[tool.hatch.envs.default]
path = ".venv"
